--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
     fff
   </div>
   <h1 class="title">title</h1>
+  <header>
+    <h2>Lorem ipsum dolor sit amet.</h2>
+  </header>
 </body>
 </html>
